@@ -22,7 +22,6 @@ CHROUST
 -------
 
 viz wiki: https://kufr.cz:1443/kk/wiki/iquest/implementace/testovani
-- heslo k HQ konfigurovat pomoci ini souboru
 
 INSTALL
 -------
