@@ -170,7 +170,7 @@
 
 
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
-; Options applicabe in the topdir only
+; Options applicable in the topdir only
 [options]
 
 ; Start and end time of the contest. Format is DD-MM-YYYY HH:MM:SS
@@ -224,3 +224,19 @@
 ; Name of the game. Used in title of all screens and also as Alt text for the logo
 ; Default: I.Quest
 ;game_name=
+
+
+[HQ]
+
+; Applicable in the topdir only!!
+; Credentials for login into HQ interface
+; Array of credentials in format: credentials[USERNAME]=PASSWORD
+;
+; The password might be specified in two ways:
+; 1. plain text
+; 2. if prepended with '$' it should be set as MD5 hash of the password
+
+credentials[admin]=admin
+; The password for user 'hq' is 'hq' specified as MD5 hash
+credentials[hq]=$25906028d04ba0563447f41dccb3c4cf
+
