@@ -278,14 +278,25 @@ class iquest_hq_auth extends iquest_auth{
         // chceck credentials
         sw_log("validate_credentials: checking credentials for username: ".$username, PEAR_LOG_DEBUG);
 
+        $credentials = Iquest_Options::get(Iquest_Options::HQ_LOGIN);
 
-        if (!isset($config->iquest_auth->admin_login[$username]) or
-            $config->iquest_auth->admin_login[$username] != $password){
-            
-            sw_log("validate_credentials: authentication failed: bad username or password ", PEAR_LOG_INFO);
-            ErrorHandler::add_error($lang_str['auth_err_bad_username']);
-            return false;
+        if ($credentials){
+            $credentials = json_decode($credentials, true);
+
+            // Authenticate by credentials from metadata.ini file
+            if (isset($credentials[$username]) and 
+                $credentials[$username] == md5($password)) return $username;
         }
+
+        // Authenticate by credentials from application config file
+        // It's disabled for now.
+        //
+        // if (isset($config->iquest_auth->admin_login[$username]) and
+        //    $config->iquest_auth->admin_login[$username] == $password) return $username;
+
+        sw_log("validate_credentials: authentication failed: bad username or password ", PEAR_LOG_INFO);
+        ErrorHandler::add_error($lang_str['auth_err_bad_username']);
+        return false;
 
 		return $username;
     }
